--- a/css/horizontalnavigation.css
+++ b/css/horizontalnavigation.css
@@ -4,60 +4,43 @@
 .horizontalmenu{
     width: 100%;
     height: 50px;
-    margin:auto;
-    display:flex ;
-    align-items: flex-start;
+    background-color: #132f7c;
 }
-.lefticon{
-    width: 4%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-content: center;
-    box-shadow:2px 2px rgb(214, 203, 203);
-}
-.icon{
-    height: 30px;
-    
-}
-.profile{
-    width: 95.8%;
-    height: 50px;
-    background-color: rgb(11, 11, 168);
-    box-shadow:2px 2px 2px 2px rgb(194, 185, 185);
-}
-.left{
-    width: 15%;
+
+.hnleftmenu{
+    width: 25%;
     height: 50px;
     float: left;
     display: flex;
-    align-items: flex-start;
+    justify-content: start;
     align-items: center;
+    padding-left: 5px;
 }
-.right{
-    width: 24%;
+.hnrightmenu{
+    width: 30%;
     height: 50px;
+    margin-right: 10px;
     float: right;
     display: flex;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: end;
     align-items: center;
 }
-.iconstyle{
-    margin: 0px 12px 0px 12px;
+.hniconstyle{
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
 }
-.iconstyle4{
-    color: white;
-}
-.profilepic, .username, .text, .downarrow , .iconstyle4, .iconstyle:hover{
+.hniconstyle:hover, .hndownarrow:hover, .hnprofilepic:hover{
     cursor: pointer;
+    background-color: #2C72FF;
 }
-.text{
-    margin: 0px 7px 0px 12px;
-    color: white;
-}
-.search{
+.hnsearch{
     width: 178px;
     background-color: white;
     border-radius: 10px;
@@ -65,27 +48,35 @@
     align-items: flex-start;
     align-items: center;
 }
-.searchbar{
+.hnsearchbar{
     width: 155px;
     margin: 0px 0px 0px 0px;
-    padding: 5px 0px 5px 5px;
+    padding: 6px 0px 6px 6px;
     border-radius: 10px;
     border: none;
     background: none;
     outline: none;
 }
-.searchbutton{
+.hnsearchbutton{
     color: black;
     margin: 2px 0px 0px 0px;
 }
-.profilepic{
-    margin: 0px 10px 0px 12px;
-    height: 25px;
+.hnprofilepic{
+    margin: 0px 10px 0px 15px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
 }
-.username{
-    padding: 0px 5px 0px 0px;
+.hnusername{
+    padding: 0px 2px 0px 0px;
     color: white;
 }
-.downarrow{
+.hndownarrow{
+    width: 30px;
+    height:30px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
 }
