--- a/css/signup.css
+++ b/css/signup.css
@@ -2,31 +2,31 @@
     margin:0px;
 }
 
-.top{
-    width: 1100px;
+.signuptop{
+    width: 700px;
     margin:5px 0px 0px 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Roboto', sans-serif;
 }
-.main{
+.signupmain{
     width: 800px;
     margin: 30px 0px 0px 250px;
 }
 
-.row{
+.suprow{
     width: 800px;
     display: flex;
     margin:10px 0px 0px 0px;
 }
-.leftside{
+.supleftside{
     width: 250px;
 }
-.rightside{
+.suprightside{
     width: 550px;
 }
-.inputlabel{
+.supinputlabel{
     width: 400px;
     padding: 9px 0px 9px 5px;
     margin: 3px 0px 0px 0px;
@@ -34,78 +34,78 @@
     border-radius: 3px;
     background-color: white;
 }
-.inputlabel:focus{
+.supinputlabel:focus{
     outline: 1px solid blue;
 }
 
-.name{
+.supname{
     margin:10px 0px 0px 174px;
     font-family: 'Roboto', sans-serif;
 }
 
-.password{
+.suppassword{
     font-family: 'Roboto', sans-serif;
     margin:11px 0px 0px 147px;
 }
-.textunderpassword{
+.suptextunderpassword{
     font-family: 'Roboto', sans-serif;
     margin-top: 4px;
     border-radius: 3px;
 }
 
-.confirmpassword{
+.supconfirmpassword{
     font-family: 'Roboto', sans-serif;
     margin: 11px 0px 0px 87px;
 }
 
-.gendertext{
+.supgendertext{
     margin: 7px 0px 0px 165px;
     font-family: 'Roboto', sans-serif;
 }
-.gender{
+.supgender{
     margin:10px 0px 0px 0px;
 }
 
-.dobtext{
+.supdobtext{
     margin: 14px 0px 0px 182px;
     font-family: 'Roboto', sans-serif;
 }
-#date{
+#supdate{
     width: 400px;
     border:1px solid #d3d3d3;
     margin: 2px 0px 0px 0px;
     padding: 9px 0px 9px 0px;
 }
 
-.phototext{
+.supphototext{
     margin: 13px 0px 0px 175px;
     font-family: 'Roboto', sans-serif;
 }
-#file{
+#supfile{
     width: 400px;
     border: 1px solid #d3d3d3;
     margin: 2px 0px 0px 0px;
     padding: 9px 0px 9px 0px;
 }
 
-.addresstext{
+.supaddresstext{
     margin:10px 0px 0px 160px;
     font-family: 'Roboto', sans-serif;
 }
-#filladdress{
+#supfilladdress{
     border:1px solid #d3d3d3;
     border-radius: 3px;
     margin: 3px 0px 0px 0px;
 }
-#filladdress:focus{
+#supfilladdress:focus{
     outline: 1px solid blue;
 }
 
-.countrytext{
+.supcountrytext{
     margin: 11px 0px 0px 160px;
     font-family: 'Roboto', sans-serif;
 }
-.country{
+.supcountry{
     width: 407px;
     padding: 9px 0px 9px 5px;
     margin: 0px 0px 0px 0px;
@@ -113,50 +113,50 @@
     border-radius: 3px;
     background-color: white;
 }
-.country:focus{
+.supcountry:focus{
     outline: 1px solid blue;
 }
 
-.mobile{
+.supmobile{
     margin: 11px 0px 0px 107px;
     font-family: 'Roboto', sans-serif;
 }
 
-.email{
+.supemail{
     margin: 11px 0px 0px 157px;
     font-family: 'Roboto', sans-serif;
 }
 
-.langtext{
+.suplangtext{
     margin: 20px 0px 0px 83px;
     font-family: 'Roboto', sans-serif;
 }
-#language{
+#suplanguage{
     width: 407px;
     margin: 3px 0px 0px 0px;
     border: 1px solid #d3d3d3;
     border-radius: 3px;
 }
-#language:focus{
+#suplanguage:focus{
     outline: 1px solid blue;
 }
 
-.checkboxrightside{
+.supcheckboxrightside{
     width: 550px;
     display: flex;
 }
-.checktext{
+.supchecktext{
     margin: 8px 0px 0px 112px;
     font-family: 'Roboto', sans-serif;
 }
-.checkbox{
+.supcheckbox{
     width: 40px;
     border:1px solid #d3d3d3;
     margin: 3px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
     background-color: rgb(210, 213, 216);
 }
-.checkboxtext{
+.supcheckboxtext{
     width: 360px;
     border: 1px solid #d3d3d3;
     border-left: none;
@@ -164,10 +164,10 @@
     margin: 3px 0px 0px 0px;
     padding: 9px 0px 9px 5px;
 }
-#box{
+#supbox{
     margin: 11px 0px 11px 13px;
 }
-.button{
+.supbutton{
     width: 100px;
     border:1px solid black;
     border-radius: 4px;
@@ -177,6 +177,6 @@
     background-color: darkgreen;
     cursor: pointer;
 }
-.button:hover {
+.supbutton:hover {
     background-color:rgb(123, 207, 123);
 }
